--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.1",
     "tsup": "^7.2.0"
   },
