--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsup ./src",
     "test": "jest",
     "coverage": "jest --coverage --silent",
+    "coverage:ci": "jest --coverage --silent --ci --colors --runInBand --coverageReporters json-summary --coverageReporters text --reporters=default --reporters=jest-junit | tee ./coverage.txt",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
