--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,13 @@ on:
     branches:
      - main
     paths-ignore:
+      - '.vscode/**'
+      - 'example/**'
       - '*.md'
   pull_request:
     paths-ignore:
+      - '.vscode/**'
+      - 'example/**'
       - '*.md'
 
 # This allows a subsequently queued workflow run to interrupt previous runs
@@ -22,20 +26,21 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
 
-      - name: Use Node.js
+      - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
           cache: 'npm'
           cache-dependency-path: package.json
 
-      - name: Install
+      - name: Install dependencies
         run: |
-          npm install --ignore-scripts
+          npm ci
 
       - name: Lint code
         run: |
@@ -50,20 +55,21 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
 
-      - name: Use Node.js
+      - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: package.json
 
-      - name: Install
+      - name: Install dependencies
         run: |
-          npm install --ignore-scripts
+          npm ci
 
       - name: Run tests
         run: |
@@ -74,3 +80,32 @@ jobs:
         with:
           coverage-path: ./coverage.txt
           junitxml-path: ./junit.xml
+
+  build:
+    name: Build
+    needs: 
+      - test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'npm'
+          cache-dependency-path: package.json
+
+      - name: Install dependencies
+        run: |
+          npm ci
+
+      - name: Build
+        run: |
+          npm run build:prod
